feat: add embeddings endpoint
